--- a/frontend/.env
+++ b/frontend/.env
@@ -1,3 +1,5 @@
+VITE_API_BASE_URL=http://localhost:7001
+
 VITE_AUTH0_DOMAIN=dev-hfe78rouysbgvfpe.us.auth0.com
 VITE_AUTH0_CLIENT_ID=8IaYwYpwjg2FKkkqz5rtVGL5iDCxHfSj
 VITE_AUTH0_CALLBACK_URL=http://localhost:5173
