upaste to deploy the backend

--- a/backend/.env
+++ b/backend/.env
@@ -1,4 +1,4 @@
-MONGODB_CONNECTION_STRING = mongodb+srv://admin:IBvxhhASqnI5PMhA@food-app.mojlf.mongodb.net/?retryWrites=true&w=majority&appName=food-app
-
+MONGODB_CONNECTION_STRING=mongodb+srv://admin:IBvxhhASqnI5PMhA@food-app.mojlf.mongodb.net/?retryWrites=true&w=majority&appName=food-app
 Auth0_AUDIENCE=mern-food-ordering-app-api
 Auth0_ISSUER_BASE_URL=https://dev-hfe78rouysbgvfpe.us.auth0.com/
+PORT=7001
